--- a/main/templates/main/information.html
+++ b/main/templates/main/information.html
@@ -13,7 +13,9 @@
     <p class="info">
         Как часто тебе говорят окружающие что у тебя ничего не получится?
         <br>
+        <br>
         Что мечта твоя  не для тебя, говорили забыть и не вспоминать?
+        <br>
         <br>
         Посмотри, ты не одинок!
         <br>
@@ -24,6 +26,10 @@
     <div class="reg">
         <a href="{% url 'register' %}">
             <button class="reg-button"> РЕГИСТРАЦИЯ </button>
+        </a>
+
+        <a href="{% url 'log' %}">
+            <button class="log-button"> ВХОД </button>
         </a>
     </div>
 
