--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -1,10 +1,6 @@
 /* общий фон */
-html {
-
-}
 
 body {
-
     background-image: url(../../img/main/space.png);
     background-position: center center;
     background-size: cover;
@@ -12,15 +8,43 @@ body {
     background-attachment: fixed;
 }
 
+
 .layout {
     text-align: center;
     margin-top: 120px;
 }
+
+
 /* общий тег */
 .teg {
     color: white;
     font-family: Tektur, sans-serif;
     margin-top: 20%;
+    margin: 0 auto;
+    font-size: 70px;
+}
+
+
+.teg-register {
+    color: white;
+    font-family: Tektur, sans-serif;
+    margin-top: 20%;
+    margin: 0 auto;
+    font-size: 70px;
+}
+
+.teg-comments {
+    color: white;
+    font-family: Tektur, sans-serif;
+    margin-top: 20%;
+    margin: 0 auto;
+    font-size: 70px;
+}
+
+.teg-login {
+    color: white;
+    font-family: Tektur, sans-serif;
+    margin-top: 50%;
     margin: 0 auto;
     font-size: 70px;
 }
@@ -49,13 +73,14 @@ body {
     font-family: Tektur, sans-serif;
 }
 
-.info a {
+.data a {
     text-decoration: none;
     color: #fff;
 }
 
-.info a:focus {
-    color: #f00
+.data a:focus {
+    text-decoration: none;
+    color: #fff;
 }
 /* общая кнопка домой */
 .btn_home {
@@ -79,7 +104,7 @@ body {
 /* кнопки навигации */
 .butt {
     align-items: center;
-    margin-top: 200px;
+    margin-top: 113px;
     display: flex;
     justify-content: center;
 }
@@ -109,8 +134,6 @@ body {
     font-size: 20px;
     font-weight: bold;
     margin-right: 300px;
-    margin-left: 10%;
-
     text-decoration: none;
     background-color: #1CB3B0;
     color: #e9e9e9;
@@ -130,7 +153,7 @@ body {
     font-family: Tektur, sans-serif;
     display: inline-grid;
     padding: 30px 40px;
-    margin-top: 70px;
+    margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
@@ -140,7 +163,23 @@ body {
     border: none;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     animation: flash 1s infinite;
+}
 
+.log-button {
+    font-family: Tektur, sans-serif;
+    display: inline-grid;
+    padding: 30px 40px;
+    margin-top: 10px;
+    margin-left: 63px;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: #1CB3B0;
+    color: #e9e9e9;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    animation: flash 1s infinite;
 }
 
 @keyframes flash {
@@ -166,6 +205,45 @@ body {
   0% { background-position: 0% center; } /* Начальное положение градиента */
   50% { background-position: 100% center; } /* Переходное положение градиента */
   100% { background-position: 0% center; } /* Конечное положение градиента */
+}
+
+.teg-register {
+    background-image: linear-gradient(to right, #0ef, #f00); /* Задает градиент от красного до зеленого */
+    background-size: 200% auto; /* Увеличивает размер фона на 200% по горизонтали */
+    background-clip: text; /* Применяет фон только к тексту */
+    -webkit-background-clip: text; /* Для поддержки вебкит-браузеров */
+    color: transparent; /* Делает текст прозрачным */
+    animation: gradient-animation 5s infinite; /* Настройка анимации */
+}
+
+@keyframes gradient-animation {
+    0% { background-position: 0% center; } /* Начальное положение градиента */
+    50% { background-position: 100% center; } /* Переходное положение градиента */
+    100% { background-position: 0% center; } /* Конечное положение градиента */
+}
+
+.teg-comments {
+    background-image: linear-gradient(to right, #0ef, #f00); /* Задает градиент от красного до зеленого */
+    background-size: 200% auto; /* Увеличивает размер фона на 200% по горизонтали */
+    background-clip: text; /* Применяет фон только к тексту */
+    -webkit-background-clip: text; /* Для поддержки вебкит-браузеров */
+    color: transparent; /* Делает текст прозрачным */
+    animation: gradient-animation 5s infinite; /* Настройка анимации */
+}
+
+.teg-login {
+    background-image: linear-gradient(to right, #0ef, #f00); /* Задает градиент от красного до зеленого */
+    background-size: 200% auto; /* Увеличивает размер фона на 200% по горизонтали */
+    background-clip: text; /* Применяет фон только к тексту */
+    -webkit-background-clip: text; /* Для поддержки вебкит-браузеров */
+    color: transparent; /* Делает текст прозрачным */
+    animation: gradient-animation 5s infinite; /* Настройка анимации */
+}
+
+@keyframes gradient-animation {
+    0% { background-position: 0% center; } /* Начальное положение градиента */
+    50% { background-position: 100% center; } /* Переходное положение градиента */
+    100% { background-position: 0% center; } /* Конечное положение градиента */
 }
 /* форма для отображения публикаций и комментариев */
 .features {
@@ -280,6 +358,15 @@ body {
     margin: 0 auto;
 }
 
+.primary-form2 {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 15%;
+}
+
 .primary-input {
     font-family: Tektur, sans-serif;
     background-color: #151821;
@@ -288,4 +375,95 @@ body {
     margin-bottom: 16px;
     border: 1px solid #222B37;
     color: #fff;
+}
+
+
+@media screen and (max-width: 768px) {
+    .layout {
+        transform: scale(0.6)
+    }
+
+    .btn_home {
+        height: 30px;
+        width: 80px;
+        font-size: 15px;
+        margin-top: 60px;
+    }
+
+    .teg {
+        font-size: 52px;
+        margin-left: 30px;
+    }
+
+    .features {
+        margin-top: -50px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .user {
+        margin-top: 20%;
+    }
+
+    .btn_home {
+        margin-top: 49px;
+        height: 32px;
+        width: 63px;
+        font-size: 12px;
+        margin-left: -14px;
+    }
+
+    .layout {
+        width: 100%;
+        margin-top: 171px;
+    }
+
+    .teg {
+        margin-top: -91px;
+        font-size: 59px;
+    }
+
+    .teg-register {
+        width: max-content;
+        margin-left: -30px;
+        font-size: 70px;
+        margin-top: 50%;
+    }
+
+    .teg-comments {
+        width: max-content;
+        margin-left: -30px;
+        font-size: 70px;
+        margin-top: 50%;
+    }
+
+    .teg-login {
+        width: max-content;
+        margin-left: 88px;
+        font-size: 90px;
+        margin-top: 50%;
+    }
+
+    .dare-button {
+        font-size: 30px;
+    }
+
+    .publ-button {
+        font-size: 30px;
+        margin-left: -114px;
+        width: 235px;
+    }
+
+    .info {
+        margin-top: -65px;
+        font-size: 25px;
+    }
+
+    .reg-button {
+        font-size: 18px;
+    }
+
+    .log-button {
+        font-size: 18px;
+    }
 }
