--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -20,7 +20,7 @@
             <div class="blog-container">
                 <h3>{{ post.name }}</h3>
                 <p>{{ post.content }}</p>
-                <div class="info">
+                <div class="data">
                     Дата: {{ post.date }}
 
                     {% if user in post.liked_by.all %}
