--- a/main/templates/main/blog_comment.html
+++ b/main/templates/main/blog_comment.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div>
         <div class="layout">
-            <h1 class="teg">КОММЕНТАРИИ</h1>
+            <h1 class="teg-comments">КОММЕНТАРИИ</h1>
         </div>
         <a href="{% url 'home' %}"><button class = "btn_home"> ГЛАВНАЯ</button></a>
         <div class="features">
@@ -21,23 +21,23 @@
                 <p> Дата: {{ post.date }}</p>
             </div>
             <div class="comment-features">
-                <h1>Что ты думаешь об этом?</h1>
-                <div class="comment-container">
-
-                    {% for comment in post.comments.all %}
-                        <h3>{{ comment.name }}</h3>
-                        <p>{{ comment.content }}</p>
-                        <p>{{ comment.date }}</p>
-                    {% endfor %}
-                </div>
+                <h1>Наши комментарии</h1>
+                    {% if post.comments.all %}
+                    <div class="comment-container">
+                        {% for comment in post.comments.all %}
+                            <h3>{{ comment.name }}</h3>
+                            <p>{{ comment.content }}</p>
+                            <p>{{ comment.date }}</p>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
             </div>
 
         </div>
-        <h2 class="add">Скажи свое мнение!</h2>
         <div class="comments_form">
             <form class="primary-form" method="post">
                 {% csrf_token %}
-                <p class="user1">{{ user.first_name }}</p>
+                <p class="user1">{{ user.username }}</p>
                 <input type="text" name="content" placeholder="Комментарий" class="primary-input" />
                 <p>{{ comment_form.date}}</p>
                 <button class="btn2" type="submit">Отправить</button>
